@@ -11,7 +11,7 @@
 %
 %  configuration file for CxProlog 0.97.4 or a later version
 %
-%  last updated: January 25, 2010
+%  last updated: January 28, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -522,6 +522,12 @@ setup_call_cleanup(Setup, Call, Cleanup) :-
 %  handling of Prolog-proprietary directives on Logtalk source files
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+% '$lgt_pl_meta_directive'(@callable)
+
+'$lgt_pl_meta_directive'(_) :-
+	fail.
 
 
 % '$lgt_ignore_pl_directive'(@callable)
