@@ -11,7 +11,7 @@
 %
 %  configuration file for ECLiPSe 6.0#77 and later versions
 %
-%  last updated: January 25, 2010
+%  last updated: January 28, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -680,6 +680,12 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 %  handling of Prolog-proprietary directives on Logtalk source files
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+% '$lgt_pl_meta_directive'(@callable)
+
+'$lgt_pl_meta_directive'(_) :-
+	fail.
 
 
 % '$lgt_ignore_pl_directive'(@callable)
